[gd_scene load_steps=6 format=2]

[ext_resource path="res://WoodLogs.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WoodenLogs.gd" type="Script" id=2]
[ext_resource path="res://GrabSprite.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0
height = 14.0

[node name="WoodenLogs" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="LogsSprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="PickUpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="GrabSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -4 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
[connection signal="area_exited" from="PickUpArea" to="." method="_on_PickUpArea_area_exited"]
